# zimmer-service

./: Cargo.toml
src/: database.sql  errors.rs  main.rs  routes.rs  state.rs
src/auth/: jwt.rs  middleware.rs
src/dbaccess/: post.rs  user.rs
src/handlers/: general.rs  mod.rs  post.rs  user.rs
src/models/: auth.rs  post.rs  user.rs
