[package]
name = "zimmer-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zimmer"
path = "src/zimmer.rs"

[dependencies]
axum = "0.8.1"
dotenv = "0.15.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sqlx = "0.8.3"
tokio = { version = "1.42.0", features = ["full"] }
uuid = "1.11.0"
