[package]
name = "zimmer-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sqlx = { version = "0.8.3", features = [
    "chrono",
    "macros",
    "derive",
    "postgres",
    "runtime-tokio-rustls",
] }
tokio = { version = "1.42.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["serde"] }
