[package]
name = "zimmer-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = { version = "4.9.0", features = ["openssl"] }
actix-web-httpauth = "0.8.2"
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
openssl = "0.10.68"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sqlx = { version = "0.8.3", features = [
    "chrono",
    "macros",
    "derive",
    "postgres",
    "uuid",
    "runtime-tokio-rustls",
] }
tokio = { version = "1.42.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["serde"] }
